--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ enable_language(CXX)
 
 find_package(kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
+find_package(platform REQUIRED)
 
 include_directories(${kodiplatform_INCLUDE_DIRS}
+                    ${platform_INCLUDE_DIRS}
                     ${KODI_INCLUDE_DIR})
 
 add_definitions(-DUSE_DEMUX)
@@ -19,7 +21,7 @@ set(WMC_SOURCES src/client.cpp
                 src/Socket.cpp
                 src/utilities.cpp)
 
-set(DEPLIBS ${kodiplatform_LIBRARIES})
+set(DEPLIBS ${platform_LIBRARIES})
 if (WIN32)
   list(APPEND DEPLIBS ws2_32)
 endif()
