--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,9 @@ cmake_minimum_required(VERSION 2.6)
 enable_language(CXX)
 
 find_package(Kodi REQUIRED)
-find_package(kodiplatform REQUIRED)
 find_package(p8-platform REQUIRED)
 
-include_directories(${kodiplatform_INCLUDE_DIRS}
-                    ${p8-platform_INCLUDE_DIRS}
+include_directories(${p8-platform_INCLUDE_DIRS}
                     ${KODI_INCLUDE_DIR})
 
 add_definitions(-DUSE_DEMUX)
@@ -25,8 +23,7 @@ set(WMC_HEADERS src/client.h
                 src/Socket.h
                 src/utilities.h)
 
-set(DEPLIBS ${kodiplatform_LIBRARIES}
-            ${p8-platform_LIBRARIES})
+set(DEPLIBS ${p8-platform_LIBRARIES})
 
 if (WIN32)
   list(APPEND DEPLIBS ws2_32)
