disable windows 4996 warning (winstore related)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(DEPLIBS ${kodiplatform_LIBRARIES}
 
 if (WIN32)
   list(APPEND DEPLIBS ws2_32)
+  add_compile_options(/wd4996) # Need gethostbyname and inet_addr change to prevent
 endif()
 
 build_addon(pvr.wmc WMC DEPLIBS)
