--- a/pvr.wmc/addon.xml.in
+++ b/pvr.wmc/addon.xml.in
@@ -158,6 +158,9 @@
     <disclaimer lang="zh_CN">试验性软件，使用风险自担。</disclaimer>
     <disclaimer lang="zh_TW">這是開發中的軟體。使用上您須自行考慮到可能有的風險。</disclaimer>
     <platform>@PLATFORM@</platform>
+    <license>GPL-2.0</license>
+    <source>https://github.com/kodi-pvr/pvr.wmc</source>
+    <forum>https://forum.kodi.tv/forumdisplay.php?fid=205</forum>
     <assets>
       <icon>icon.png</icon>
     </assets>
