--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,20 @@ cmake_minimum_required(VERSION 3.5)
 project(pvr.wmc)
 
 find_package(Kodi REQUIRED)
-find_package(p8-platform REQUIRED)
 
-include_directories(${p8-platform_INCLUDE_DIRS}
-                    ${KODI_INCLUDE_DIR}/..) # Hack way with "/..", need bigger Kodi cmake rework to match right include ways
+include_directories(${KODI_INCLUDE_DIR}/..) # Hack way with "/..", need bigger Kodi cmake rework to match right include ways
 
-add_definitions(-DUSE_DEMUX)
-
-set(WMC_SOURCES src/client.cpp
+set(WMC_SOURCES src/addon.cpp
                 src/pvr2wmc.cpp
+                src/settings.cpp
                 src/Socket.cpp
                 src/utilities.cpp)
 
-set(WMC_HEADERS src/client.h
+set(WMC_HEADERS src/addon.h
                 src/pvr2wmc.h
+                src/settings.h
                 src/Socket.h
                 src/utilities.h)
-
-set(DEPLIBS ${p8-platform_LIBRARIES})
 
 if (WIN32)
   list(APPEND DEPLIBS ws2_32)
