--- a/pvr.wmc/addon.xml.in
+++ b/pvr.wmc/addon.xml.in
@@ -69,9 +69,9 @@
     <summary lang="zh_CN">WMC PVR 客户端</summary>
     <summary lang="zh_TW">PVR WMC用戶端</summary>
     <description lang="af_ZA">'n PVR kliënt om met Windows Media Center Recording en EPG dienste te skakel. Dankie vir Tomba73 en Hoopsdavis. Spesiale dankie aan DBurckh.</description>
-    <description lang="bg_BG">Клиент за ПВР, който работи с услугите на „Windows Media Center“ за записване и електронен програмен справочник. Благодарности на Tomba73 и Hoopsdavis. Специални благодарности на DBurckh.</description>
+    <description lang="bg_BG">Клиент за PVR, който работи с услугите на „Windows Media Center“ за записване и електронен програмен справочник. Благодарности на Tomba73 и Hoopsdavis. Специални благодарности на DBurckh.</description>
     <description lang="cs_CZ">Klient PVR pro rozhraní služeb nahrávání a televezního programu Windows Media Centra. Díky pro Tomba73 a Hoopsdavis. Speciální díky pro DBurckh.</description>
-    <description lang="da_DK">En PVR klient der interagere med Windows Media Centers optagelse og EPG services. Tak til Tomba73 og Hoopsdavis. En speciel tak til DBurckh.</description>
+    <description lang="da_DK">En PVR-klient der interagerer med Windows Media Centers optagelses- og EPG-tjenester. Tak til Tomba73 og Hoopsdavis. En særlig tak til DBurckh.</description>
     <description lang="de_DE">Ein PVR-Client zur Verknüpfung mit den Aufnahme- und EPG-Diensten des Windows Media Centers. Dank an Tomba73 und Hoopsdavis. Besonderer Dank an DBurckh.</description>
     <description lang="el_GR">Ένας πελάτης PVR για διασύνδεση με τις υπηρεσίες Εγγραφής και EPG του Windows Media Center. Ευχαριστούμε τους Tomba73 και Hoopsdavis. Ένα ιδιαίτερο ευχαριστώ στον DBurckh.</description>
     <description lang="en_AU">A PVR client to interface with Windows Media Centre's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh.</description>
