Sync of addon metadata translations

--- a/pvr.wmc/addon.xml.in
+++ b/pvr.wmc/addon.xml.in
@@ -86,7 +86,7 @@
     <description lang="fr_FR">Un client enregistreur vidéo (PVR) s&apos;interfaçant avec les services d&apos;enregistrement et de guide électronique des programmes TV de Windows Media Center. Merci à Tomba73 et Hoopsdavis. Un merci spécial à DBurckh.</description>
     <description lang="gl_ES">Un cliente PVR para os servizos de Gravación e Guía do Windows Media Center. Grazas a Tomba73 e Hoopsdavis. Grazas especiais a DBurckh.</description>
     <description lang="he_IL">לקוח טלוויזיה חיה של Windows Media Center. תומך בהזרמת שידורים חיים והקלטות, הצגת לוח שידורים ותזמון הקלטות.</description>
-    <description lang="hr_HR">PVR klijent za povezivanje sa snimanjima i EPG uslugom Windows Media Centra.. Zahvaljujemo Tomba73 i Hoopsdavis. Posebna zahvala DBurckh.</description>
+    <description lang="hr_HR">PVR klijent za povezivanje sa snimanjima i EPG uslugom Windows Media Centra. Zahvaljujemo Tomba73 i Hoopsdavis. Posebna zahvala DBurckh.</description>
     <description lang="hu_HU">Egy PVR kliens a Windows Media Center felvételeihez és EPG szolgáltatáshoz. Köszönet: JeffreyF, Tomba73, Hoopsdavis. Különleges köszönet: DBurckh.</description>
     <description lang="id_ID">Sebuah klien PVR untuk berhubungan dengan Perekaman Windows Media Center dan layanan EPG. Terimakasih untuk Tomba73 dan Hoopsdavis. Terimakasih khusus untuk DBurckh.</description>
     <description lang="is_IS">PVR-biðlari til að tala við Windows Media Center&apos;s upptöku og rafræna dagskrárþjónustur. Þakkir fá Tomba73 og Hoopsdavis. Sérstakar þakkir fær DBurckh.</description>
