Sync of addon metadata translations

--- a/pvr.wmc/addon.xml.in
+++ b/pvr.wmc/addon.xml.in
@@ -138,7 +138,7 @@
     <disclaimer lang="hu_HU">Fejlesztés alatt! A saját felelősségére használja!</disclaimer>
     <disclaimer lang="id_ID">Perangkat lunak ini masih eksperimental. Resiko ditanggung penumpang.</disclaimer>
     <disclaimer lang="is_IS">Þetta er tilraunahugbúnaður. Notið á eigin ábyrgð.</disclaimer>
-    <disclaimer lang="it_IT">Prova questo software sperimentale. Usalo a tuo rischio e pericolo.</disclaimer>
+    <disclaimer lang="it_IT">Questo è un software sperimentale. Utilizzare a proprio rischio.</disclaimer>
     <disclaimer lang="ja_JP">これは実験的なソフトウェアです。利用は自己責任でお願いします。</disclaimer>
     <disclaimer lang="ko_KR">이것은 실험적인 소프트웨어 입니다. 본인의 책임하에 사용해주세요.</disclaimer>
     <disclaimer lang="lt_LT">Tai yra eksperimentinė programinė įranga. Naudodami ją prisiimate visą riziką.</disclaimer>
